# AI-Agent-Guard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
legacy/: README.md  main.js  package-lock.json  package.json  preload.js
legacy/renderer/: index.html  renderer.js
renderer/: i18n-main.js  i18n.js  style.css
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  event_logger.rs  hook_server.rs  lib.rs  main.rs  mcp_scanner.rs  models.rs  rule_engine.rs
src/components/: ConfirmDialog.tsx  EventRow.tsx  RiskBadge.tsx
src/pages/: LogWindow.tsx  McpScanTab.tsx  SettingsTab.tsx  SetupWizard.tsx
