[package]
name = "ai-agent-guard"
version = "0.1.0"
description = "AI Agent Guard - Claude Code Hook Security Monitor"
authors = ["AI Agent Guard Contributors"]
license = "MIT"
repository = "https://github.com/r00t/ai-agent-guard"
edition = "2021"

[lib]
name = "ai_agent_guard_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ai-agent-guard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "catch-panic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
arc-swap = "1"
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
notify = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
